<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBarActualizar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombres"
        android:inputType="textPersonName"
        android:text="@string/nombres" />

    <EditText
        android:id="@+id/txt_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        android:text="@string/correo" />

    <EditText
        android:id="@+id/txt_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPersonName"
        android:text="@string/direccion" />

    <EditText
        android:id="@+id/txt_cedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cedula"
        android:inputType="textPersonName"
        android:text="@string/cedula" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="textPersonName"
        android:text="@string/telefono" />

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:text="@string/usuario" />

    <EditText
        android:id="@+id/txt_tarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tarjeta"
        android:inputType="textPersonName"
        android:text="@string/tarjeta" />

    <EditText
        android:id="@+id/txt_fehca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fecha_de_nacimiento"
        android:inputType="textPersonName"
        android:text="@string/fecha_de_nacimiento" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_usuario" />

</LinearLayout>