<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".Modelos.RegistroUsuarios.SesionFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtcorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="example@mail.com"
            android:inputType="textPersonName"
            tools:targetApi="o" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPersonName"
            tools:targetApi="o" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="****"
            android:inputType="textPassword"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cedula"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtCedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPersonName"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_nacimiento"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="dd/mm/yyyy"
            android:inputType="textPersonName"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarjeta"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="0000 0000 0000 0000"
            android:inputType="textPersonName"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombres"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPersonName"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPersonName"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPersonName"
            tools:targetApi="o" />
    </LinearLayout>

    <Button
        android:id="@+id/btnregistrar"
        style="@style/fondoEstiloDoradoInternoAzulExterno"
        android:layout_width="143dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/registrarse" />

</LinearLayout>